<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">
            <ImageButton
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_skip"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="30sp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo"
                />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint"
                android:inputType="phone"
                android:padding="10dp"
                android:textSize="30sp"
                android:autofillHints="phone"
                android:fontFamily="@font/textfont"
                android:background="@drawable/button_border"
                android:layout_margin="10dp"
/>

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="30sp"
                android:fontFamily="@font/textfont"
                android:background="@drawable/button_border"
                android:autofillHints="password"
                android:layout_margin="10dp"
                />
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:padding="10dp"
                android:fontFamily="@font/textfont"
                android:background="@drawable/button_border"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp">
            <Button
                android:id="@+id/btn_reg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:padding="10dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:fontFamily="@font/textfont"
                android:background="@drawable/button_border"
                android:layout_marginHorizontal="8dp"/>

            <Button
                android:id="@+id/btn_forget_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:padding="10dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:fontFamily="@font/textfont"
                android:background="@drawable/button_border"
                android:layout_marginHorizontal="8dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
