<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.i_postureguard.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.i_postureguard.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="com.example.i_postureguard.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />
    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.example.i_postureguard.ui.exercise.ExerciseFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_exercise" />
    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.i_postureguard.ui.information.InformationFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_exercise" />
</navigation>