<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".ui.exercise.FragmentExerciseEyesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingRight="24dp"
        android:paddingLeft="24dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="onBackButtonClicked"
            android:paddingLeft="62dp"
            android:paddingRight="62dp"
            android:layout_margin="12dp"
            android:fontFamily="@font/font"
            android:textSize="28sp"
            android:background="@drawable/button_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/eyes_exercise_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:onClick="onExerciseButtonClicked"
            android:paddingLeft="62dp"
            android:paddingRight="62dp"
            android:layout_margin="12dp"
            android:fontFamily="@font/font"
            android:textSize="28sp"
            android:background="@drawable/button_blue"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyes_exercise"
            android:textSize="35sp"
            android:fontFamily="@font/font"
            android:paddingStart="16dp"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="50dp" />
    </LinearLayout>
</ScrollView>